--- a/index.html
+++ b/index.html
@@ -192,6 +192,27 @@
 			</ol>
 		</div>
 	</main>
+
+	<div class="modal">
+		<div class="modal-media">
+			<img src="" alt="">
+			<h3 class="modal-media-title">Oscar Enríquez</h3>
+		</div>
+		<div class="modal-content">
+			<h3>About Me</h3>
+			<p>I'm a seiously good copy and paster. Front-end dev for @codeschool, lover of all things web design/dev related an founder of @frontendconf.</p>
+
+			<ol class="news">
+				<li class="news-item">
+					<a href="#" class="news-link">Fronted Design</a>
+				</li>
+				<li class="news-item">
+					<a href="#" class="news-link">Javascript Modules: A Beginner's Guide</a>
+				</li>
+			</ol>
+		</div>
+	</div>
+
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="app.js"></script>
 </body>
